// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`вернет верные данные, если есть оффер 1`] = `
Object {
  "amount": Object {
    "max": 769500,
    "min": 100000,
    "step": 25000,
  },
  "carPrice": 855000,
  "rate": 7.7,
  "term": Array [
    12,
    24,
    36,
    48,
    60,
  ],
}
`;

exports[`вернет верные данные, если нет оффера 1`] = `
Object {
  "amount": Object {
    "max": 1000000,
    "min": 100000,
    "step": 25000,
  },
  "carPrice": 0,
  "rate": 7.7,
  "term": Array [
    12,
    24,
    36,
    48,
    60,
  ],
}
`;

exports[`поменяет максимальную цену для тачки дешевле минимальной суммы кредита 1`] = `
Object {
  "amount": Object {
    "max": 300000,
    "min": 300000,
    "step": 25000,
  },
  "carPrice": 128000,
  "rate": 7.7,
  "term": Array [
    12,
    24,
    36,
    48,
    60,
  ],
}
`;
